@@ -97,6 +97,7 @@ S3method(makeRLearner,classif.bst)
 S3method(makeRLearner,classif.cforest)
 S3method(makeRLearner,classif.clusterSVM)
 S3method(makeRLearner,classif.ctree)
+S3method(makeRLearner,classif.dbnDNN)
 S3method(makeRLearner,classif.dcSVM)
 S3method(makeRLearner,classif.extraTrees)
 S3method(makeRLearner,classif.fnn)
@@ -244,6 +245,7 @@ S3method(predictLearner,classif.bst)
 S3method(predictLearner,classif.cforest)
 S3method(predictLearner,classif.clusterSVM)
 S3method(predictLearner,classif.ctree)
+S3method(predictLearner,classif.dbnDNN)
 S3method(predictLearner,classif.dcSVM)
 S3method(predictLearner,classif.extraTrees)
 S3method(predictLearner,classif.fnn)
@@ -439,6 +441,7 @@ S3method(trainLearner,classif.bst)
 S3method(trainLearner,classif.cforest)
 S3method(trainLearner,classif.clusterSVM)
 S3method(trainLearner,classif.ctree)
+S3method(trainLearner,classif.dbnDNN)
 S3method(trainLearner,classif.dcSVM)
 S3method(trainLearner,classif.extraTrees)
 S3method(trainLearner,classif.fnn)
